--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,37 @@ target/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Test artifacts
+test*.json
+test*.log
+*-scan.json
+*-scan.log
+*-findings.json
+scan-output.json
+scan-errors.log
+vulnerable-scan.json
+parser-debug.log
+
+# Downloaded binaries
+kubectl
+helm
+
+# Backup files
+*.backup
+*.bak
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor files
+*.swp
+*.swo
+*~
+.vscode/
+.idea/
+
+# Node modules (in case parser grows)
+node_modules/
+npm-debug.log
