--- a/helm/templates/parser-scan-type.yaml
+++ b/helm/templates/parser-scan-type.yaml
@@ -1,28 +1,31 @@
+# This file defines the ParseDefinition - it tells SecureCodeBox how to parse scan results
+# CRITICAL: The name of this ParseDefinition matters in SecureCodeBox v4.5.0!
 apiVersion: "execution.securecodebox.io/v1"
 kind: ParseDefinition
 metadata:
+  # The parser name includes the scanner name for clarity
+  # But SecureCodeBox matches parsers based on the ScanType's extractResults.type
   name: {{ include "rust-scan.fullname" . }}-parser
   labels:
+    # Standard Kubernetes labels
     {{- include "rust-scan.labels" . | nindent 4 }}
 spec:
-  # Reference to the ScanType this parser handles
-  scanType: {{ include "rust-scan.fullname" . }}
+  # NOTE: SecureCodeBox v4.5.0 does NOT support 'scanType' or 'timeout' fields
+  # The matching happens through naming convention instead
   
-  # Parser image configuration
+  # Parser container image configuration
   image: "{{ .Values.parser.image.repository }}:{{ .Values.parser.image.tag }}"
   imagePullPolicy: {{ .Values.parser.image.pullPolicy }}
   
-  # How results are provided to parser
+  # Environment variables tell the parser where to find scan results
   env:
     - name: SCAN_RESULTS_FILE
       value: "/home/securecodebox/scan-results.json"
   
-  # Resource limits for parser
+  # Resource limits for the parser pod
   resources:
     {{- toYaml .Values.parser.resources | nindent 4 }}
   
-  # Parse results are written here
-  resultFile: "/home/securecodebox/findings.json"
-  
-  # Timeout for parsing
-  timeout: "120s"
+  # CRITICAL: Content type must be exactly "Text" with capital T
+  # SecureCodeBox validates this field strictly
+  contentType: Text
